test/test_suite/errors/simple_static_failable.c3t
// #target: macos-x64

module foo;

faultdef Y;

fn void main()
{
    static int? x = 120;
    int? i = Y~;
}

/* #expect: foo.ll

define void @foo.main() #0 {
entry:
  %i = alloca i32, align 4
  %i.f = alloca i64, align 8
  store i64 ptrtoint (ptr @foo.Y to i64), ptr %i.f, align 8
  ret void
}